--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
    <!-- BoxIcons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons/css/boxicons.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
     <!-- href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"> -->
 
 
   <title>Restaurant Responsive</title>
 </head>
 <body>
-  
+  <!-- Header -->
+   <header>
+    <!-- Nav -->
+     <div class="nav container">
+      <!-- Logo -->
+       <a href="#" class="logo">
+        <img src="assets/img/logo.png" alt="Logo Empresa">
+       </a>
+       <!-- Navbar -->
+        <div class="navbar">
+          <a href="#home" class="nav-link">Home</a>
+          <a href="#home" class="nav-link">Featured Items</a>
+          <a href="#home" class="nav-link">Menu</a>
+          <a href="#home" class="nav-link">Testimonals</a>
+          <a href="#home" class="nav-link">Blog</a>
+        </div>
+        <!-- Nav Icons -->
+         <div class="nav-icons">
+          <a href="#"><i class="bx bx-user"></i></a>
+         </div>
+     </div>
+   </header>
   
 </body>
 </html>
